# Poetry---Midterm

./: Main.py  Poetry_Commands.ipynb  README.md  code_examples.py  ~$PoetryMidtermSlides.pptx
poetry-demo/: README.md  pandas_ex.py  pyproject.toml
private_project/: private_ex.py  pyproject.toml
private_project/private_project/: pandas_ex.py
rp-poetry/: countries.csv  pandas.ipynb  pandas_ex.py  pyproject.toml
