[tool.poetry]
name = "rp-poetry"
version = "0.1.0"
description = ""
authors = ["Justin Stone <justone@davidson.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.1"
jupyterlab = "^4.1.2"
ipykernel = "^6.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
